Add another article.

--- a/References.bib
+++ b/References.bib
@@ -2052,9 +2052,9 @@ The two borehole heat exchangers were analyzed over both long- and short-term pe
   abstract = { Purpose – This paper aims to present a framework for deriving analytical and semi‐numerical models for coupled conductive‐convective heat transfer processes in a borehole heat exchanger subjected to general initial and boundary conditions.Design/methodology/approach – The discrete Fourier transform and the spectral element method have been utilized for deriving two spectral models for a single U‐tube borehole heat exchanger in contact with a soil mass.Findings – Verification and numerical examples have shown that the developed models are accurate and computationally very efficient. It is illustrated that one spectral element is capable of producing results which are more accurate than those produced by 200 finite elements.Practical implications – The gained computational efficiency and accuracy will boost considerably the possibilities for more insight into geothermal analysis, which will improve the procedure for designing competitive energy extraction systems.Originality/value – The models are capable of calculating exactly the temperature distribution in all involved borehole heat exchanger components and their thermal interactions. },
   doi      = {10.1108/09615531011065566},
   eprint   = {https://doi.org/10.1108/09615531011065566},
-  url      = { 
+  url      = {
         https://doi.org/10.1108/09615531011065566
-    
+
 },
 }
 
@@ -2089,9 +2089,9 @@ The two borehole heat exchangers were analyzed over both long- and short-term pe
   doi       = {10.1080/19401493.2010.513739},
   eprint    = {http://dx.doi.org/10.1080/19401493.2010.513739},
   publisher = {Taylor \& Francis},
-  url       = { 
+  url       = {
         http://dx.doi.org/10.1080/19401493.2010.513739
-    
+
 },
 }
 
@@ -2504,6 +2504,19 @@ In 1996, a US federal agency began developing a new building energy simulation t
   author    = {Haibing Shao and Philipp Hein and Agnes Sachse and Olaf Kolditz},
   editor    = {Thomas Nagel and Haibing Shao},
   address   = {Cham, Switzerland},
+}
+
+@Article{Cimmino2017,
+  author    = {Massimo Cimmino},
+  title     = {A finite line source simulation model for geothermal systems with series- and parallel-connected boreholes and independent fluid loops},
+  journal   = {Journal of Building Performance Simulation},
+  year      = {2017},
+  pages     = {1--19},
+  abstract  = { A model for the simulation of geothermal systems with parallel- and series-connected boreholes is presented. Mass and heat balance problems are formulated for each component in the system and are assembled into system-level problems. A third problem is formulated to account for heat transfer in the bore field, using the finite line source solution. This third problem is coupled to the system-level heat balance problem by an analytical solution of the heat transfer inside boreholes with multiple U-tubes. The simulation model allows for any number of independent fluid loops within the bore field or within individual boreholes and allows for combinations of specified inlet fluid temperatures and heat extraction rates in independent fluid loops. The model accounts for the axial variation of the fluid and borehole wall temperatures and heat extraction rates. The capabilities of the model are demonstrated through three example simulations. },
+  doi       = {10.1080/19401493.2017.1381993},
+  eprint    = {https://doi.org/10.1080/19401493.2017.1381993},
+  publisher = {Taylor \& Francis},
+  url       = { https://doi.org/10.1080/19401493.2017.1381993},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
