--- a/References.bib
+++ b/References.bib
@@ -1,14 +1,14 @@
 % Encoding: UTF-8
 
 @Article{Adams1987,
-  author    = {Adams, E. Eric and Schweickart, Randolph},
-  title     = {Intake operation for deep cooling reservoirs},
-  journal   = {Journal of Energy Engineering},
-  year      = {1987},
-  volume    = {113},
-  number    = {2},
-  pages     = {37--49},
-  abstract  = {Most cooling reservoirs in the U.S. employ a surface intake, but many could obtain improved performance (decreased intake temperature during summer) by using a submerged intake. Potential improvements were studied using mathematical hydrothermal modeling applied to five hypothetical reservoirs located in Augusta, Ga. For the base case reservoir-characterized by an average depth of 30 ft (9.1 m), surface area of 2,000 acres (809 ha), and areal loading of 0.99 MWt/acre-and a range of vertical mixing parameters, intake temperatures from Apr.-Oct. decreased by an average of 0.7-1.2F (0.4-0.7C) using a submerged intake as compared with a surface intake. For a range of assumed turbine performance curves and cost parameters, these temperatures yield estimated energy savings of 1,200,000-20,400,000 kWh annually and total, present valued, cost savings of $700,000-$11,600,000. Savings increase as the reservoir area and depth increase and vertical mixing decreases. In most cases, performance also improves with combined use of a surface and a submerged intake, with the former used during initial periods of the annual stratification cycle.},
+  author   = {Adams, E. Eric and Schweickart, Randolph},
+  title    = {Intake operation for deep cooling reservoirs},
+  journal  = {Journal of Energy Engineering},
+  year     = {1987},
+  volume   = {113},
+  number   = {2},
+  pages    = {37--49},
+  abstract = {Most cooling reservoirs in the U.S. employ a surface intake, but many could obtain improved performance (decreased intake temperature during summer) by using a submerged intake. Potential improvements were studied using mathematical hydrothermal modeling applied to five hypothetical reservoirs located in Augusta, Ga. For the base case reservoir-characterized by an average depth of 30 ft (9.1 m), surface area of 2,000 acres (809 ha), and areal loading of 0.99 MWt/acre-and a range of vertical mixing parameters, intake temperatures from Apr.-Oct. decreased by an average of 0.7-1.2F (0.4-0.7C) using a submerged intake as compared with a surface intake. For a range of assumed turbine performance curves and cost parameters, these temperatures yield estimated energy savings of 1,200,000-20,400,000 kWh annually and total, present valued, cost savings of $700,000-$11,600,000. Savings increase as the reservoir area and depth increase and vertical mixing decreases. In most cases, performance also improves with combined use of a surface and a submerged intake, with the former used during initial periods of the annual stratification cycle.},
 }
 
 @Article{Ahmad1986,
@@ -76,11 +76,11 @@
 }
 
 @MastersThesis{AustinIII1998,
-  author      = {Austin III, Warren Adam},
-  title       = {Development of an In Situ System for Measuring Ground Thermal Properties},
+  author      = {Austin, Warren Adam},
+  title       = {Development of an in-situ System for Measuring Ground Thermal Properties},
   year        = {1998},
-  institution = {Oklahoma State University},
   address     = {Stillwater, OK},
+  institution = {Oklahoma State University},
   publisher   = {Oklahoma State University},
   volume      = {M.S.},
 }
@@ -1542,14 +1542,14 @@
   publisher    = {ASHRAE},
 }
 
-@Article{Xiong2015,
-  author    = {Xiong, Zeyu and Fisher, Daniel E. and Spitler, Jeffery D.},
-  title     = {Development and validation of a slinky ground heat exchanger model},
-  journal   = {Applied Energy},
-  year      = {2015},
-  volume    = {141},
-  pages     = {57--69},
-  abstract  = {Ground source heat pump systems are an energy efficient heating and cooling technology for residential and commercial buildings. The main barrier to adoption is the higher investment cost compared to conventional systems. Where available land area permits, horizontal ground heat exchangers are generally less expensive than vertical borehole-type ground heat exchangers (GHXs). A further cost reduction can be made by using Slinky GHXs, which require less trench space and hence reduce the installation cost, in many cases. It is desirable to formulate an accurate model for simulation purposes; such simulations can be used in both design tools and in energy analysis programs. The model formulated in this paper relies on analytical ring source solutions to compute temperature response functions for both horizontal and vertical Slinky heat exchangers. The algorithms used to calculate the response factors have several features that significantly increase computation speed. The thermal effect of the ground surface temperature variation on the GHXs is considered by superimposing the undisturbed ground temperature, which is calculated using the numerical approach. For use in system simulations where the GHX may be connected to other components, the model is formulated to calculate both heat transfer rate and exiting fluid temperature, given entering fluid temperature. The model has been validated against the previously published field test data.},
+@Article{XiongFisherSpitler2015,
+  author   = {Xiong, Zeyu and Fisher, Daniel E. and Spitler, Jeffery D.},
+  title    = {Development and validation of a slinky ground heat exchanger model},
+  journal  = {Applied Energy},
+  year     = {2015},
+  volume   = {141},
+  pages    = {57--69},
+  abstract = {Ground source heat pump systems are an energy efficient heating and cooling technology for residential and commercial buildings. The main barrier to adoption is the higher investment cost compared to conventional systems. Where available land area permits, horizontal ground heat exchangers are generally less expensive than vertical borehole-type ground heat exchangers (GHXs). A further cost reduction can be made by using Slinky GHXs, which require less trench space and hence reduce the installation cost, in many cases. It is desirable to formulate an accurate model for simulation purposes; such simulations can be used in both design tools and in energy analysis programs. The model formulated in this paper relies on analytical ring source solutions to compute temperature response functions for both horizontal and vertical Slinky heat exchangers. The algorithms used to calculate the response factors have several features that significantly increase computation speed. The thermal effect of the ground surface temperature variation on the GHXs is considered by superimposing the undisturbed ground temperature, which is calculated using the numerical approach. For use in system simulations where the GHX may be connected to other components, the model is formulated to calculate both heat transfer rate and exiting fluid temperature, given entering fluid temperature. The model has been validated against the previously published field test data.},
 }
 
 @MastersThesis{Xiong2014,
@@ -2277,7 +2277,6 @@ In 1996, a US federal agency began developing a new building energy simulation t
   title   = {Thermal resistance of u-tube borehole heat exchanger system: numerical study},
   school  = {University of Manchester},
   year    = {2013},
-  type    = {Masters thesis},
   address = {Manchester, UK},
 }
 
@@ -2517,6 +2516,253 @@ In 1996, a US federal agency began developing a new building energy simulation t
   eprint    = {https://doi.org/10.1080/19401493.2017.1381993},
   publisher = {Taylor \& Francis},
   url       = { https://doi.org/10.1080/19401493.2017.1381993},
+}
+
+@Article{KusudaAchenbach1965,
+  author  = {T. Kusuda and P.R. Achenbach},
+  title   = {Earth temperatures and thermal diffusivity at selected stations in the {United States}},
+  journal = {ASHRAE Transactions},
+  year    = {1965},
+  volume  = {71},
+  number  = {1},
+  pages   = {61--74},
+}
+
+@Article{XingSpitler2017a,
+  author    = {Lu Xing and Jeffrey D. Spitler},
+  title     = {Prediction of undisturbed ground temperature using analytical and numerical modeling. {Part I}: Model development and experimental validation},
+  journal   = {Science and Technology for the Built Environment},
+  year      = {2017},
+  volume    = {23},
+  number    = {5},
+  pages     = {787--808},
+  abstract  = { The interaction of buildings and ground source heat pump systems with the surrounding ground is quite important for design and energy calculation procedures. This article describes a one-dimensional finite volume numerical model that can be used to estimate the undisturbed ground temperatures under various ground covers—short grass, tall grass, bare soil, concrete, and asphalt; and a two-harmonic analytical model, which requires minimum computational time and is intended for engineering application. The analytical model relies on five model parameters: annual average ground temperature, two temperature amplitudes, and two phase lags to estimate the ground temperatures. The parameters are estimated using the numerical model results. This article presents experimental validations of both models: Nineteen geographically and climatically diverse measurement sites, covered by short grass or tall grass, are chosen for validating the models for a 1-year period using weather data at the sites. Validation results show that both models satisfactorily predict the undisturbed ground temperatures for these sites; the mean root mean square errors of the numerical model at all sites are 1.3°C–1.6°C (2.3°F–2.9°F) at 5, 20, 50, and 100 cm depths; the mean root mean square errors of the analytical model at all sites are 1.4°C–2.4°C (2.5°F–4.3°F) at the four depths. In companion articles by Xing and Spitler (2017) and Xing et al. (2017), the authors develop automatic procedures using the two models to generate a worldwide dataset of both typical year ground temperatures and design year ground temperatures. },
+  doi       = {10.1080/23744731.2016.1258371},
+  eprint    = {https://doi.org/10.1080/23744731.2016.1258371},
+  publisher = {Taylor \& Francis},
+  url       = { 
+        https://doi.org/10.1080/23744731.2016.1258371
+    
+},
+}
+
+@Article{XingSpitler2017b,
+  author    = {Lu Xing and Jeffrey D. Spitler},
+  title     = {Prediction of undisturbed ground temperature using analytical and numerical modeling. {Part II}: Methodology for developing a world-wide dataset},
+  journal   = {Science and Technology for the Built Environment},
+  year      = {2017},
+  volume    = {23},
+  number    = {5},
+  pages     = {809--825},
+  abstract  = { Analyses of building heating and cooling load calculations and design of ground heat exchangers often require the undisturbed ground temperatures as inputs. In a companion article (Xing and Spitler 2017), a two-harmonic analytical model which is used for the estimations of undisturbed ground temperatures for engineering applications has been developed. This model relies on a second-order harmonic relationship and five weather-related constants—annual average ground temperature, two temperature amplitudes, and two phase lags to predict the ground temperatures. These parameters are estimated using temperature results calculated from the numerical method developed by Xing and Spitler (2017). The two-harmonic model is validated using measured ground temperature data at 19 sites in the United States; these sites are located in three different climates—arid climates, warm climates, and snow climates. The model is convenient and provides with good accuracy. It relies on inputs such as soil diffusivity, vegetation density, and snow depth to estimate the ground temperatures; these inputs vary from site to site or vary with time. In order to generate typical year ground temperatures for thousands of sites over a worldwide range, the method described in Xing and Spitler (2017) needs some automated procedures to estimate these inputs for each site. These procedures are developed and described in this article. The two-harmonic model estimated typical year ground temperatures was compared to the experimental results at the 19 sites in the United States to validate the automated procedures. The validated procedures and model are applied for estimating typical year ground temperatures over a worldwide range for engineering application (Xing et al. 2017). },
+  doi       = {10.1080/23744731.2016.1262705},
+  eprint    = {https://doi.org/10.1080/23744731.2016.1262705},
+  publisher = {Taylor \& Francis},
+  url       = { 
+        https://doi.org/10.1080/23744731.2016.1262705
+    
+},
+}
+
+@Article{XingSpitler2017c,
+  author    = {Lu Xing and Jeffrey D. Spitler and Arkasama Bandyopadhyay},
+  title     = {Prediction of undisturbed ground temperature using analytical and numerical modeling. {Part III}: Experimental validation of a world-wide dataset},
+  journal   = {Science and Technology for the Built Environment},
+  year      = {2017},
+  volume    = {23},
+  number    = {5},
+  pages     = {826--842},
+  abstract  = { Undisturbed ground temperatures are often required for engineering applications, such as analyses of building heating and cooling load calculations and design of ground heat exchangers. In two companion articles, an automated procedure for generating a world-wide dataset of typical year ground temperatures has been developed and validated against measured results at 19 Soil Climate Analysis Network sites. This procedure relies on a two-harmonic relationship and five weather-related constants—annual average ground temperature, two temperature amplitudes, and two phase lags—to predict the undisturbed ground temperatures. These constant values generated for 4092 sites world-wide covered by short and tall grass are summarized in Appendix A and B in this article. In the United States, a one-harmonic model which relies on three constant values to estimate the ground temperatures is commonly used. The ASHRAE Handbook and ASHRAE District Heating Guide provide these constant values in North America and in a world-wide range, respectively. The estimated typical year ground temperatures using the Xing and Spitler procedure are compared to the measured results at the 19 Soil Climate Analysis Network sites, it shows the mean root mean square errors of all sites are within 1.3°C–1.6°C (2.3°F–2.9°F) at 5–100 cm (2–40″) depths, which are 0.7°C–1.4°C (1.3°F–2.5°F) lower than the root mean square errors given by the commonly used procedures in United States. Estimations of the peak (maximum/minimum) ground temperature over multiple years are also important. Thus, a correction factor β is introduced in the two-harmonic model, the newly developed simplified design model could now be used to predict typical year ground temperatures and peak ground temperatures of multiple years. For a typical year, the correction factor is set to be 1. It is suggested that the correction factor of 1.6 to be chosen, so as to use the simplified design model to estimated maximum/minimum ground temperatures of multiple years. },
+  doi       = {10.1080/23744731.2016.1253978},
+  eprint    = {https://doi.org/10.1080/23744731.2016.1253978},
+  publisher = {Taylor \& Francis},
+  url       = { 
+        https://doi.org/10.1080/23744731.2016.1253978
+    
+},
+}
+
+@PhdThesis{Xing2014,
+  author  = {Lu Xing},
+  title   = {Estimations of undisturbed ground temperatures using numerical and analytical modeling},
+  school  = {Oklahoma State University},
+  year    = {2014},
+  address = {Stillwater, OK},
+}
+
+@Article{Cimmino2018,
+  author    = {Massimo Cimmino},
+  title     = {Fast calculation of the g-functions of geothermal borehole fields using similarities in the evaluation of the finite line source solution},
+  journal   = {Journal of Building Performance Simulation},
+  year      = {2018},
+  volume    = {Online},
+  pages     = {1--14},
+  abstract  = {Numerical methods are proposed for the efficient evaluation of the g-functions of geothermal bore fields using the finite line source solution. The presented methods reduce the calculation time for the calculation of g-functions by reducing the number of numerical evaluations of the analytical finite line source solution. A similarity identification method is presented to identify pairs of boreholes for which the finite line source solution takes the same value. A load history reconstruction method is presented to evaluate the g-function at non-uniform time-steps. Using the proposed numerical methods, the calculation time for the g-function of a rectangular field of 12 × 12 boreholes is reduced by a factor 308. The numerical methods allow the evaluation of g-functions of bore fields with large amounts of boreholes in irregular configurations. The g-function of a field of 512 randomly positioned boreholes is calculated in 27 minutes. },
+  doi       = {10.1080/19401493.2017.1423390},
+  eprint    = {https://doi.org/10.1080/19401493.2017.1423390},
+  publisher = {Taylor \& Francis},
+  url       = { 
+        https://doi.org/10.1080/19401493.2017.1423390
+    
+},
+}
+
+@Article{BEIER201179,
+  author   = {Richard A. Beier and Marvin D. Smith and Jeffrey D. Spitler},
+  title    = {Reference data sets for vertical borehole ground heat exchanger models and thermal response test analysis},
+  journal  = {Geothermics},
+  year     = {2011},
+  volume   = {40},
+  number   = {1},
+  pages    = {79--85},
+  issn     = {0375-6505},
+  abstract = {Ground source heat pump systems often use vertical boreholes to exchange heat with the ground. Two areas of active research are the development of models to predict the thermal performance of vertical boreholes and improved procedures for analysis of in situ thermal conductivity tests, commonly known as thermal response tests (TRT). Both the models and analysis procedures ultimately need to be validated by comparing them to actual borehole data sets. This paper describes reference data sets for researchers to test their borehole models. The data sets are from a large laboratory “sandbox” containing a borehole with a U-tube. The tests are made under more controlled conditions than can be obtained in field tests. Thermal response tests on the borehole include temperature measurements on the borehole wall and within the surrounding soil, which are not usually available in field tests. The test data provide independent values of soil thermal conductivity and borehole thermal resistance for verifying borehole models and TRT analysis procedures. As an illustration, several borehole models are compared with one of the thermal response tests.},
+  doi      = {https://doi.org/10.1016/j.geothermics.2010.12.007},
+  keywords = {Ground-coupled heat pumps, Borehole heat exchangers, Heat transfer, Soil thermal conductivity, Thermal response test, Borehole thermal resistance},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0375650511000022},
+}
+
+@MastersThesis{Hern2004,
+  author  = {Shawn Alex Hern},
+  title   = {Design of an experimental facility for hybrid ground source heat pump systems},
+  school  = {Oklahoma State University},
+  year    = {2004},
+  address = {Stillwater, OK},
+}
+
+@InProceedings{GehlinSpilterLarssonAnnsberg2018,
+  author    = {Singhild Gehlin and Jeffrey D. Spitler and Anders Larsson and {\AA}ke Annsberg},
+  title     = {Measured performance of the {University of Stockholm Studenthuset} ground source heat pump system},
+  booktitle = {14\textsuperscript{th} Inernational Conference on Energy Storage-EnerSTOCK2018},
+  year      = {2018},
+  pages     = {1--14},
+  address   = {Adana, Turkey},
+  note      = {April 25--28},
+}
+
+@Article{CullinSpitler2014,
+  author    = {James R. Cullin and Jeffrey D. Spitler and C. Montagud and F. Ruiz-Calvo and Simon J. Rees and S. S. Naicker and Petr Kone\v{c}n\'{y}},
+  title     = {Validation of vertical ground heat exchanger design methodologies},
+  journal   = {Science and Technology for the Built Environment},
+  year      = {2015},
+  volume    = {21},
+  number    = {2},
+  pages     = {137--149},
+  abstract  = { This work presents a validation of two common methods for designing vertical ground heat exchangers. Both a simulation-based design tool and the ASHRAE handbook design equation are used to find design lengths for four different real systems, using actual experimental data, including building loads as well as physical parameters as inputs. The measured minimum and maximum ground heat exchanger exiting fluid temperatures were used as the design constraint. The simulation-based design tool predicted the borehole length to within 6\% in all cases, while the ASHRAE handbook design equation yielded systems with errors from –21\% to 167\%. Most of this error can be explained by the way loads are represented in the ASHRAE handbook equation, with differences in the borehole thermal resistance also playing a smaller part. The ASHRAE handbook equation relies on a very simple load representation; although this allows it to be used as a simple hand calculation, it also precludes it achieving acceptable accuracy. It does not appear to be possible to revise the ASHRAE handbook equation so as to both significantly improve its accuracy and allow its use in a simple hand calculation. },
+  doi       = {10.1080/10789669.2014.974478},
+  eprint    = {https://doi.org/10.1080/10789669.2014.974478},
+  publisher = {Taylor \& Francis},
+  url       = { 
+        https://doi.org/10.1080/10789669.2014.974478
+    
+},
+}
+
+@Article{MONTAGUD20113618,
+  author   = {C. Montagud and J.M. Corberán and \'A. Montero and J.F. Urchuegu\'ia},
+  title    = {Analysis of the energy performance of a ground source heat pump system after five years of operation},
+  journal  = {Energy and Buildings},
+  year     = {2011},
+  volume   = {43},
+  number   = {12},
+  pages    = {3618--3626},
+  issn     = {0378-7788},
+  abstract = {GeoCool plant was the result of a EU project whose main purpose was to adapt ground coupled heat pump technology to cooling dominated areas. The execution of this experimental plant was completed at the end of year 2004, starting on February 2005 the regular operation of the air conditioning system. Since then, GeoCool facility has been monitored by a network of sensors characterizing its most relevant parameters. Several aspects of the performance and behaviour of the system during its first operational year were presented on a previous paper. This paper presents the energy performance measurements of GeoCool ground coupled heat pump system acquired during five years of operation as well as the evolution of the return water temperature from the ground as a representative of the ground temperature. The analysis of the experimental results shows that the system energy performance is maintained through the years with no appreciable impact on ground thermal response.},
+  doi      = {https://doi.org/10.1016/j.enbuild.2011.09.036},
+  keywords = {Heating and cooling systems, Ground coupled heat pump, Energy efficiency},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0378778811004385},
+}
+
+@Article{Parsons2008,
+  author  = {B. Parsons},
+  title   = {A living laboratory: {ASHRAE's} renovated headquarters},
+  journal = {Canadian Consulting Engineer},
+  year    = {2008},
+  volume  = {49},
+  number  = {7},
+  pages   = {31--33},
+}
+
+@InProceedings{NaickerRees2011,
+  author    = {S. S. Naicker and Simon J. Rees},
+  title     = {Monitoring and performance analysis of large non-domestic ground source heat pump system installation},
+  booktitle = {Proceedings of 2011 CIBSE Technical Symposium},
+  year      = {2011},
+  address   = {Leicester, UK},
+  note      = {September 6--7},
+}
+
+@Article{SouthardLiuSpitler2014b,
+  author  = {Laura E. Southard and Xiaobing Liu and Jeffrey D. Spitler},
+  title   = {Performance of {HVAC} systems at {ASHRAE HQ} -- {Part 2}},
+  journal = {ASHRAE Journal},
+  year    = {2014},
+  volume  = {56},
+  number  = {12},
+  pages   = {12--23},
+}
+
+@Article{,
+}
+
+@Article{SouthardLiuSpitler2014a,
+  author  = {Laura E. Southard and Xiaobing Liu and Jeffrey D. Spitler},
+  title   = {Performance of {HVAC} systems at {ASHRAE HQ} -- {Part 1}},
+  journal = {ASHRAE Journal},
+  year    = {2014},
+  volume  = {56},
+  number  = {9},
+  pages   = {14--24},
+}
+
+@Article{NaickerRees2018,
+  author  = {Selvaraj S. Naicker and Simon J. Rees},
+  title   = {Performance analysis of a large geothermal heating and cooling system},
+  journal = {Renewable Energy},
+  year    = {2018},
+  volume  = {In Press},
+  pages   = {1--16},
+}
+
+@PhdThesis{Naicker2016,
+  author  = {Selvaraj S. Naicker},
+  title   = {Performance analysis of large-scale ground source heat pump system},
+  school  = {De Montfort University},
+  year    = {2016},
+  address = {Leicester, UK},
+}
+
+@MastersThesis{Eldridge2007,
+  author  = {David S. Eldridge},
+  title   = {Design of an experimental facility for the validation of cooling load calculation procedures},
+  school  = {Oklahoma State University},
+  year    = {2007},
+  address = {Stillwater, OK},
+}
+
+@Article{EldridgeFisherIuChanti2003,
+  author  = {David S. Eldridge and Daniel E. Fisher and I. S. Iu and C. Chantrasrisalai},
+  title   = {Experimental validation of design cooling load procedures: facility design},
+  journal = {ASHRAE Transactions},
+  year    = {2003},
+  volume  = {109},
+  number  = {2},
+  pages   = {151--159},
+}
+
+@Article{MAGRANER20101394,
+  author   = {T. Magraner and \'A. Montero and S. Quilis and J.F. Urchuegu\'ia},
+  title    = {Comparison between design and actual energy performance of a HVAC-ground coupled heat pump system in cooling and heating operation},
+  journal  = {Energy and Buildings},
+  year     = {2010},
+  volume   = {42},
+  number   = {9},
+  pages    = {1394--1401},
+  issn     = {0378-7788},
+  abstract = {This work compares the experimental results obtained for the energy performance study of a ground coupled heat pump system with the design values predicted by means of standard methodology. The system energy performance of a monitored ground coupled heat pump system is calculated using the instantaneous measurements of temperature, flow and power consumption and these values are compared with the numerical predictions. These predictions are performed with the TRNSYS software tool following standard procedures taking the experimental thermal loads as input values. The main result of this work is that simulation results solely based on nominal heat pump capacities and performances overestimate the measured overall energy performance by a percentage between 15% and 20%. A sensitivity analysis of the simulation results to changes in percentage of its input parameters showed that the heat pump nominal coefficient of performance is the parameter that mostly affects the energy performance predictions. This analysis supports the idea that the discrepancies between experimental results and simulation outputs for this ground coupled system are mainly due to heat pump performance degradation for being used at partial load. An estimation of the impact of this effect in energy performance predictions reduces the discrepancies to values around 5%.},
+  doi      = {https://doi.org/10.1016/j.enbuild.2010.03.008},
+  keywords = {Heating and cooling systems, Ground coupled heat pump, Energy efficiency, Computer simulation, Experiments},
+  url      = {http://www.sciencedirect.com/science/article/pii/S037877881000085X},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
