--- a/References.bib
+++ b/References.bib
@@ -2716,12 +2716,15 @@ In 1996, a US federal agency began developing a new building energy simulation t
 }
 
 @Article{NaickerRees2018,
-  author  = {Selvaraj S. Naicker and Simon J. Rees},
-  title   = {Performance analysis of a large geothermal heating and cooling system},
-  journal = {Renewable Energy},
-  year    = {2018},
-  volume  = {In Press},
-  pages   = {1--16},
+  author   = {Selvaraj S. Naicker and Simon J. Rees},
+  title    = {Performance analysis of a large geothermal heating and cooling system},
+  journal  = {Renewable Energy},
+  year     = {2018},
+  issn     = {0960-1481},
+  abstract = {Ground Source Heat Pump systems can play an important role in reducing carbon emissions associated with building heating and cooling. The efficiencies and carbon emission savings achieved, partly depend on the optimization of the design, the control of the system and its reliability during extended operation. This paper reports the detailed investigation of the performance of a large system that includes fifty-six vertical borehole heat exchangers and four large heat pumps that provide both heating and cooling. High frequency data have been collected during the initial three years of operation that allow seasonal performance factors to be derived and detailed analysis of system operation. Annual performance has been found to be satisfactory overall but is highly variable depending on operating conditions and control system actions. A series of analyses have been carried out to investigate the roles of circulating pump energy, control system operation and dynamic behaviour. A series of recommendations concerned with better design for part-load operation, reduction in pump energy demands and more robust control systems, are made with a view to improved system design and operation. Data from the study are being made available for further work on performance analysis and model validation studies.},
+  doi      = {https://doi.org/10.1016/j.renene.2018.01.099},
+  keywords = {Geothermal, Ground source heat pump, System performance factor, Borehole heat exchanger, Performance analysis},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0960148118301095},
 }
 
 @PhdThesis{Naicker2016,
@@ -2763,6 +2766,16 @@ In 1996, a US federal agency began developing a new building energy simulation t
   doi      = {https://doi.org/10.1016/j.enbuild.2010.03.008},
   keywords = {Heating and cooling systems, Ground coupled heat pump, Energy efficiency, Computer simulation, Experiments},
   url      = {http://www.sciencedirect.com/science/article/pii/S037877881000085X},
+}
+
+@Article{MonzoBernierAcunaMorgensen2016,
+  author  = {Patricia Monz\'o and Michel Bernier and Jos\'e Acu{\~n}a and Palne Morgensen},
+  title   = {A monthly based bore field sizing methodology with applications to optimum borehole spacing},
+  journal = {ASHRAE Transactions},
+  year    = {2016},
+  volume  = {122},
+  number  = {1},
+  pages   = {111--126},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
